--- a/src/main/res/layout/fragment_check_if_vegan.xml
+++ b/src/main/res/layout/fragment_check_if_vegan.xml
@@ -53,7 +53,7 @@
 
 
         <Button
-            android:id="@+id/uncertain_ingredients_next_button"
+            android:id="@+id/next_wizard_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
@@ -67,7 +67,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/confirmed_vegan_comment"
-            android:layout_toLeftOf="@+id/uncertain_ingredients_next_button"
+            android:layout_toLeftOf="@+id/next_wizard_button"
             android:layout_marginTop="10dp"
             android:layout_marginRight="50dp"
             android:text="@string/action_previous" />
