--- a/src/main/res/layout/fragment_metainformation.xml
+++ b/src/main/res/layout/fragment_metainformation.xml
@@ -123,7 +123,7 @@
 
 
         <Button
-            android:id="@+id/metainformation_next_button"
+            android:id="@+id/next_wizard_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
@@ -133,11 +133,11 @@
             android:text="@string/action_next" />
 
         <Button
-            android:id="@+id/metainformation_cancel_button"
+            android:id="@+id/cancel_wizard_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/commentary_edit"
-            android:layout_toLeftOf="@+id/metainformation_next_button"
+            android:layout_toLeftOf="@+id/next_wizard_button"
             android:layout_marginTop="10dp"
             android:layout_marginRight="50dp"
             android:text="@string/action_cancel" />
