--- a/src/main/res/layout/activity_check_if_vegetarian.xml
+++ b/src/main/res/layout/activity_check_if_vegetarian.xml
@@ -3,5 +3,5 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".wizard.CheckIfLactoOvoVegetarian"
+    tools:context=".wizard.CheckIfVegetarian"
     tools:ignore="MergeRootFrame" />
