--- a/src/main/res/values/wizard.xml
+++ b/src/main/res/values/wizard.xml
@@ -24,4 +24,8 @@
     <string name="contains_additives_of_possible_animal_origins">Inneholdet produktet tilsetningsstoffer som kan komme fra dyr? Kryss av for det varen inneholder:</string>
     <string name="possible_animal_derived_additives">Tilsetningsstoffer som kan ha animalsk opprinnelse</string>
 
+    <!-- red list -->
+    <string name="animal_bodies_enumeration">En eller flere typer dyrekjøtt, inklusive fisk, fugl, skalldyr, skjell og insekter.</string>
+    <string name="red_listed_ingredients">Karmin (E120), østerssaus, rogn, kjøttkraft, kjøttbuljong, gelatin, aspik, pepsin, løpe eller rennin fra kalv eller kalsium mesoinositol hexafosfat.</string>
+
 </resources>
