--- a/src/main/res/values/wizard.xml
+++ b/src/main/res/values/wizard.xml
@@ -26,6 +26,6 @@
 
     <!-- red list -->
     <string name="animal_bodies_enumeration">En eller flere typer dyrekjøtt, inklusive fisk, fugl, skalldyr, skjell og insekter.</string>
-    <string name="red_listed_ingredients">Karmin (E120), østerssaus, rogn, kjøttkraft, kjøttbuljong, gelatin, aspik, pepsin, løpe eller rennin fra kalv eller kalsium mesoinositol hexafosfat.</string>
+    <string name="red_listed_ingredients">Kjøttkraft, kjøttbuljong, rogn, østerssaus, gelatin, løpe eller rennin fra kalv, karmin (E120), aspik, pepsin eller kalsium mesoinositol hexafosfat.</string>
 
 </resources>
