--- a/src/main/res/drawable/thin_dark_border.xml
+++ b/src/main/res/drawable/thin_dark_border.xml
@@ -6,8 +6,8 @@
         android:width="1dp"
         android:color="#333333" />
     <padding
+        android:bottom="1dp"
         android:left="1dp"
-        android:top="1dp"
         android:right="1dp"
-        android:bottom="1dp" />
+        android:top="1dp" />
 </shape>
