--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -12,9 +12,9 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/launcher_background"
             android:alpha="0.2"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"
+            android:src="@drawable/launcher_background" />
     </RelativeLayout>
 
     <ScrollView
@@ -24,87 +24,87 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/activity_vertical_margin"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin"
-            android:paddingBottom="@dimen/activity_vertical_margin">
+            android:paddingTop="@dimen/activity_vertical_margin">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/scanning_headline"
-                android:textStyle="bold"
-                android:textSize="30sp"
-                android:layout_centerHorizontal="true"
                 android:id="@+id/scanning_headline"
-                android:layout_alignParentTop="true"
-                android:textColor="#526021" />
-
-            <TextView
-                android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/scanning_instructions"
-                android:textSize="20sp"
+                android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
+                android:text="@string/scanning_headline"
+                android:textColor="#526021"
+                android:textSize="30sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/scanning_instructions"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_below="@+id/scanning_headline"
-                android:id="@+id/scanning_instructions" />
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
+                android:text="@string/scanning_instructions"
+                android:textSize="20sp" />
 
             <Button
+                android:id="@+id/scan_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/scan_product_code"
-                android:id="@+id/scan_button"
                 android:layout_below="@+id/scanning_instructions"
                 android:layout_centerHorizontal="true"
-                android:background="@drawable/rounded_corners_green_bg"
-                android:padding="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="38dp"
+                android:background="@drawable/rounded_corners_green_bg"
+                android:padding="10dp"
+                android:text="@string/scan_product_code"
                 android:textSize="36sp" />
 
             <Button
+                android:id="@+id/input_code"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/input_product_code"
-                android:id="@+id/input_code"
                 android:layout_below="@+id/scan_button"
                 android:layout_centerHorizontal="true"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:layout_marginTop="38dp"
                 android:background="@drawable/rounded_corners_green_bg"
                 android:padding="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
+                android:text="@string/input_product_code"
                 android:textSize="36sp" />
 
 
             <Button
+                android:id="@+id/test_new_add"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Test legg til"
-                android:id="@+id/test_new_add"
                 android:layout_below="@+id/input_code"
                 android:layout_centerHorizontal="true"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:layout_marginTop="38dp"
                 android:background="@drawable/rounded_corners_green_bg"
                 android:padding="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
+                android:text="Test legg til"
                 android:textSize="36sp" />
 
             <Button
+                android:id="@+id/test_new_modify"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Test endre"
-                android:id="@+id/test_new_modify"
                 android:layout_below="@+id/test_new_add"
                 android:layout_centerHorizontal="true"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:layout_marginTop="38dp"
                 android:background="@drawable/rounded_corners_green_bg"
                 android:padding="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
+                android:text="Test endre"
                 android:textSize="36sp" />
 
         </RelativeLayout>
@@ -113,11 +113,11 @@
     </ScrollView>
 
     <RelativeLayout
-        android:background="#aa000000"
+        android:id="@+id/progressbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone"
-        android:id="@+id/progressbar">
+        android:background="#aa000000"
+        android:visibility="gone">
 
         <ProgressBar
             style="@android:style/Widget.ProgressBar.Inverse"
