--- a/src/main/res/layout/activity_modify_product.xml
+++ b/src/main/res/layout/activity_modify_product.xml
@@ -11,126 +11,126 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:paddingBottom="@dimen/activity_vertical_margin"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            tools:context=".ModifyProduct"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp">
+            tools:context=".ModifyProduct">
 
             <LinearLayout
+                android:id="@+id/gtin_row"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical"
                 android:layout_alignParentTop="true"
-                android:id="@+id/gtin_row">
+                android:gravity="center_vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/product_gtin_label"
-                    android:textStyle="bold"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/gtin_value"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/gtin_value"
                     android:layout_marginLeft="10dp" />
 
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/name_row"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical"
                 android:layout_below="@+id/gtin_row"
-                android:id="@+id/name_row">
+                android:gravity="center_vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/product_name_label"
-                    android:textStyle="bold"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
                 <EditText
+                    android:id="@+id/title_edit"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="textCapSentences"
+                    android:layout_marginLeft="10dp"
                     android:hint="@string/product_name_hint"
-                    android:id="@+id/title_edit"
-                    android:layout_marginLeft="10dp" />
+                    android:inputType="textCapSentences" />
 
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/subtitle_row"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical"
                 android:layout_below="@+id/name_row"
                 android:layout_marginTop="10dp"
-                android:id="@+id/subtitle_row">
+                android:gravity="center_vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/product_variant_label"
-                    android:textStyle="bold"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
                 <EditText
+                    android:id="@+id/subtitle_edit"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="textCapSentences"
+                    android:layout_marginLeft="10dp"
                     android:hint="@string/product_variant_hint"
-                    android:id="@+id/subtitle_edit"
-                    android:layout_marginLeft="10dp" />
+                    android:inputType="textCapSentences" />
 
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/brand_row"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical"
                 android:layout_below="@+id/subtitle_row"
                 android:layout_marginTop="10dp"
-                android:id="@+id/brand_row">
+                android:gravity="center_vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/product_brand_label"
-                    android:textStyle="bold"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
                 <EditText
+                    android:id="@+id/brand_edit"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="textCapSentences"
+                    android:layout_marginLeft="10dp"
                     android:hint="@string/product_brand_hint"
-                    android:id="@+id/brand_edit"
-                    android:layout_marginLeft="10dp" />
+                    android:inputType="textCapSentences" />
 
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/status_row"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical"
                 android:layout_below="@+id/brand_row"
                 android:layout_marginTop="10dp"
-                android:id="@+id/status_row"
+                android:gravity="center_vertical"
                 android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/product_status_label"
-                    android:textStyle="bold"
                     android:layout_marginBottom="6dp"
-                    android:textSize="20sp" />
+                    android:text="@string/product_status_label"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
                 <CheckBox
                     android:id="@+id/product_contains_bodyparts"
@@ -172,61 +172,61 @@
                     android:id="@+id/product_contains_other_animal_derived"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/product_contains_other_animal_derived"
-                    android:checked="false" />
+                    android:checked="false"
+                    android:text="@string/product_contains_other_animal_derived" />
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/other_animal_derived_row"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:gravity="center_vertical"
                 android:layout_below="@+id/status_row"
                 android:layout_marginTop="10dp"
-                android:visibility="gone"
-                android:id="@+id/other_animal_derived_row">
+                android:gravity="center_vertical"
+                android:orientation="vertical"
+                android:visibility="gone">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/product_other_animal_derived_label"
-                    android:textStyle="bold"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
                 <EditText
+                    android:id="@+id/product_other_animal_derived_edit"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/product_other_animal_derived_hint"
-                    android:inputType="textCapSentences|textMultiLine"
                     android:ems="10"
                     android:gravity="left|top"
-                    android:id="@+id/product_other_animal_derived_edit" />
+                    android:hint="@string/product_other_animal_derived_hint"
+                    android:inputType="textCapSentences|textMultiLine" />
 
             </LinearLayout>
 
             <EditText
+                android:id="@+id/commentary_edit"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/user_commentary_hint"
-                android:id="@+id/commentary_edit"
                 android:layout_below="@+id/other_animal_derived_row"
-                android:inputType="textCapSentences|textMultiLine"
+                android:layout_marginTop="10dp"
                 android:ems="10"
                 android:gravity="left|top"
-                android:layout_marginTop="10dp"
+                android:hint="@string/user_commentary_hint"
+                android:inputType="textCapSentences|textMultiLine"
                 android:lines="2" />
 
             <Button
                 android:id="@+id/submit_button"
-                android:layout_below="@+id/commentary_edit"
-                android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/commentary_edit"
                 android:layout_centerHorizontal="true"
-                android:background="@drawable/rounded_corners_green_bg"
-                android:padding="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/rounded_corners_green_bg"
+                android:padding="10dp"
                 android:text="@string/product_modification_submit_label"
                 android:textSize="20sp" />
 
@@ -237,11 +237,11 @@
     <!-- frame two -->
 
     <RelativeLayout
-        android:background="#aa000000"
+        android:id="@+id/progressbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone"
-        android:id="@+id/progressbar">
+        android:background="#aa000000"
+        android:visibility="gone">
 
         <ProgressBar
             style="@android:style/Widget.ProgressBar.Inverse"
