--- a/src/main/res/layout/activity_product_details.xml
+++ b/src/main/res/layout/activity_product_details.xml
@@ -7,100 +7,100 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
         tools:context=".ProductDetails">
 
         <TextView
+            android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:maxLines="2"
-            android:ellipsize="marquee"
-            android:marqueeRepeatLimit="3"
-            android:text="@string/label_unknown_title"
-            android:id="@+id/title"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="5dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="@string/label_unknown_subtitle"
-            android:maxLines="2"
+            android:layout_marginTop="5dp"
             android:ellipsize="marquee"
             android:marqueeRepeatLimit="3"
+            android:maxLines="2"
+            android:text="@string/label_unknown_title"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <TextView
             android:id="@+id/subtitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/title"
+            android:layout_centerHorizontal="true"
             android:layout_marginTop="5dp"
-            android:layout_centerHorizontal="true" />
+            android:ellipsize="marquee"
+            android:marqueeRepeatLimit="3"
+            android:maxLines="2"
+            android:text="@string/label_unknown_subtitle"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
 
         <LinearLayout
-            android:orientation="horizontal"
+            android:id="@+id/statusline"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/subtitle"
             android:layout_marginTop="10dp"
             android:gravity="center_horizontal"
-            android:id="@+id/statusline">
+            android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="@string/label_unknown_product"
                 android:padding="5dp"
-                android:id="@+id/status" />
+                android:text="@string/label_unknown_product"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
         </LinearLayout>
 
         <TextView
+            android:id="@+id/contains_animal_ingredients"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:id="@+id/contains_animal_ingredients"
             android:layout_below="@+id/statusline"
-            android:visibility="gone"
+            android:layout_centerHorizontal="true"
             android:layout_marginTop="5dp"
-            android:layout_centerHorizontal="true" />
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:visibility="gone" />
 
         <TextView
+            android:id="@+id/missing_vegan_information"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:id="@+id/missing_vegan_information"
             android:layout_below="@+id/contains_animal_ingredients"
-            android:visibility="gone"
+            android:layout_centerHorizontal="true"
             android:layout_marginTop="5dp"
-            android:layout_centerHorizontal="true" />
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:visibility="gone" />
 
         <com.android.volley.toolbox.NetworkImageView
+            android:id="@+id/product_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/product_image"
             android:layout_below="@+id/missing_vegan_information"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp"
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:maxHeight="240dp"
+            android:layout_marginTop="20dp"
+            android:adjustViewBounds="true"
             android:background="@drawable/thin_dark_border"
-            android:scaleType="centerInside"
-            android:adjustViewBounds="true" />
+            android:maxHeight="240dp"
+            android:scaleType="centerInside" />
 
         <LinearLayout
-            android:orientation="horizontal"
+            android:id="@+id/button_row"
+            style="?android:attr/buttonBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/product_image"
-            android:layout_marginTop="10dp"
             android:layout_centerHorizontal="true"
-            style="?android:attr/buttonBarStyle"
-            android:id="@+id/button_row">
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/scan_button"
@@ -118,9 +118,9 @@
                 style="?android:attr/buttonBarStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/label_modify_product"
                 android:background="@drawable/rounded_corners_green_bg"
                 android:padding="10dp"
+                android:text="@string/label_modify_product"
                 android:textSize="20sp" />
 
         </LinearLayout>
