--- a/src/main/res/layout/fragment_enough_information.xml
+++ b/src/main/res/layout/fragment_enough_information.xml
@@ -2,42 +2,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".wizard.EnoughInformation.EnoughInformationFragment">
 
     <TextView
         android:id="@+id/enough_information_headline"
-        android:text="@string/wizard_complete_thanks"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="@string/wizard_complete_thanks" />
 
     <TextView
         android:id="@+id/status"
-        android:layout_below="@+id/enough_information_headline"
-        android:layout_marginTop="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <Button
-        android:layout_marginTop="10dp"
-        android:id="@+id/submit_button"
-        android:layout_below="@id/status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/enough_information_headline"
+        android:layout_marginTop="10dp" />
+
+    <Button
+        android:id="@+id/submit_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/status"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
         android:padding="10dp"
         android:text="@string/submit_for_approval" />
 
     <Button
-        android:layout_marginTop="10dp"
         android:id="@+id/cancel_button"
-        android:layout_below="@id/submit_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/submit_button"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
         android:padding="10dp"
         android:text="@string/cancel_wizard" />
 
