--- a/src/main/res/layout/fragment_manual_input.xml
+++ b/src/main/res/layout/fragment_manual_input.xml
@@ -2,53 +2,53 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".ManualInputActivity$PlaceholderFragment">
 
 
     <TextView
+        android:id="@+id/manual_gtin_input_instructions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_alignParentTop="true"
         android:text="@string/manual_gtin_input_instructions"
-        android:id="@+id/manual_gtin_input_instructions"
-        android:layout_alignParentTop="true" />
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
 
     <TextView
+        android:id="@+id/manual_input_gtin_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/manual_input_gtin_label"
-        android:id="@+id/manual_input_gtin_label"
-        android:layout_marginTop="16dp"
         android:layout_below="@+id/manual_gtin_input_instructions"
-        android:labelFor="@+id/manual_input_gtin_edittext" />
+        android:layout_marginTop="16dp"
+        android:labelFor="@+id/manual_input_gtin_edittext"
+        android:text="@string/manual_input_gtin_label"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <EditText
+        android:id="@+id/manual_input_gtin_edittext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/manual_input_gtin_label"
+        android:layout_centerHorizontal="true"
+        android:ems="10"
         android:inputType="number"
         android:maxLength="14"
-        android:ems="10"
-        android:id="@+id/manual_input_gtin_edittext"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/manual_input_gtin_label"
-        android:singleLine="true"
-        android:numeric="integer" />
+        android:numeric="integer"
+        android:singleLine="true" />
 
     <Button
+        android:id="@+id/manual_gtin_search"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/manual_gtin_search"
-        android:id="@+id/manual_gtin_search"
         android:layout_below="@+id/manual_input_gtin_edittext"
-        android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
         android:background="@drawable/rounded_corners_green_bg"
+        android:text="@string/manual_gtin_search"
         android:textSize="20sp" />
 
 
