--- a/src/main/res/layout/fragment_metainformation.xml
+++ b/src/main/res/layout/fragment_metainformation.xml
@@ -17,20 +17,20 @@
             android:id="@+id/gtin_row"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:layout_alignParentTop="true">
+            android:layout_alignParentTop="true"
+            android:gravity="center_vertical">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/product_gtin_label"
-                android:textStyle="bold"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/gtin_value"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/gtin_value"
                 android:layout_marginLeft="10dp" />
 
         </LinearLayout>
@@ -39,23 +39,23 @@
             android:id="@+id/name_row"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:layout_below="@+id/gtin_row">
+            android:layout_below="@+id/gtin_row"
+            android:gravity="center_vertical">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/product_name_label"
-                android:textStyle="bold"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <EditText
+                android:id="@+id/title_edit"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textCapSentences"
+                android:layout_marginLeft="10dp"
                 android:hint="@string/product_name_hint"
-                android:id="@+id/title_edit"
-                android:layout_marginLeft="10dp" />
+                android:inputType="textCapSentences" />
 
         </LinearLayout>
 
@@ -63,62 +63,62 @@
             android:id="@+id/subtitle_row"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
             android:layout_below="@+id/name_row"
-            android:layout_marginTop="10dp">
+            android:layout_marginTop="10dp"
+            android:gravity="center_vertical">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/product_variant_label"
-                android:textStyle="bold"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <EditText
+                android:id="@+id/subtitle_edit"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textCapSentences"
+                android:layout_marginLeft="10dp"
                 android:hint="@string/product_variant_hint"
-                android:id="@+id/subtitle_edit"
-                android:layout_marginLeft="10dp" />
+                android:inputType="textCapSentences" />
 
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/brand_row"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
             android:layout_below="@+id/subtitle_row"
             android:layout_marginTop="10dp"
-            android:id="@+id/brand_row">
+            android:gravity="center_vertical">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/product_brand_label"
-                android:textStyle="bold"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <EditText
+                android:id="@+id/brand_edit"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textCapSentences"
+                android:layout_marginLeft="10dp"
                 android:hint="@string/product_brand_hint"
-                android:id="@+id/brand_edit"
-                android:layout_marginLeft="10dp" />
+                android:inputType="textCapSentences" />
 
         </LinearLayout>
 
         <EditText
+            android:id="@+id/commentary_edit"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/user_commentary_hint"
-            android:id="@+id/commentary_edit"
             android:layout_below="@+id/brand_row"
-            android:inputType="textCapSentences|textMultiLine"
+            android:layout_marginTop="10dp"
             android:ems="10"
             android:gravity="left|top"
-            android:layout_marginTop="10dp"
+            android:hint="@string/user_commentary_hint"
+            android:inputType="textCapSentences|textMultiLine"
             android:lines="2" />
 
 
@@ -137,9 +137,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/commentary_edit"
-            android:layout_toLeftOf="@+id/next_wizard_button"
-            android:layout_marginTop="10dp"
             android:layout_marginRight="50dp"
+            android:layout_marginTop="10dp"
+            android:layout_toLeftOf="@+id/next_wizard_button"
             android:text="@string/action_cancel" />
 
     </RelativeLayout>
