--- a/src/main/res/layout/splashscreen.xml
+++ b/src/main/res/layout/splashscreen.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/screen"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#526E17"
-    android:id="@+id/screen">
+    android:background="#526E17">
 
     <ImageView
-        android:layout_height="fill_parent"
         android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_gravity="center"
-        android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:contentDescription="@string/please_wait"
         android:gravity="center"
-        android:src="@drawable/splashscreen"
-        android:contentDescription="@string/please_wait" />
+        android:src="@drawable/splashscreen" />
 
 </LinearLayout>
