--- a/src/main/res/menu/main.xml
+++ b/src/main/res/menu/main.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/action_about"
-        android:title="@string/action_about"
         android:orderInCategory="100"
-        android:showAsAction="never" />
+        android:showAsAction="never"
+        android:title="@string/action_about" />
 </menu>
