--- a/src/main/res/layout/fragment_check_if_vegan.xml
+++ b/src/main/res/layout/fragment_check_if_vegan.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:text="@string/contains_additives_of_possible_animal_origins"
+            android:text="@string/contains_additives_of_possible_animal_origins_headline"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <CheckBox
@@ -27,23 +27,45 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/uncertain_ingredients_headline"
             android:layout_marginTop="10dp"
-            android:text="@string/possible_animal_derived_additives" />
+            android:text="@string/possible_animal_derived_additives"
+            android:textStyle="bold" />
 
+        <TextView
+            android:id="@+id/possible_animal_derived_additives_details"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/possible_animal_derived_additives"
+            android:layout_marginTop="1dp"
+            android:paddingLeft="@dimen/padding_checkbox"
+            android:text="@string/possible_animal_derived_additives_details" />
+
+        <Button
+            android:id="@+id/yellow_list_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/possible_animal_derived_additives_details"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="10dp"
+            android:background="@drawable/rounded_corners_green_bg"
+            android:onClick="viewYellowList"
+            android:padding="10dp"
+            android:text="@string/show_yellow_ingredients_list" />
 
         <CheckBox
             android:id="@+id/manufacturer_confirms_vegan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/possible_animal_derived_additives"
+            android:layout_below="@+id/yellow_list_button"
+            android:layout_marginTop="10dp"
             android:text="@string/manufacturer_confirms_product_is_vegan"
             android:visibility="gone" />
-
 
         <EditText
             android:id="@+id/confirmed_vegan_comment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/manufacturer_confirms_vegan"
+            android:layout_marginTop="10dp"
             android:ems="10"
             android:gravity="left|top"
             android:hint="@string/insert_documentation_from_manufacturer"
