--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -4,19 +4,6 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:alpha="0.2"
-            android:scaleType="centerCrop"
-            android:src="@drawable/launcher_background" />
-    </RelativeLayout>
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -25,58 +12,91 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin">
 
-            <TextView
-                android:id="@+id/scanning_headline"
+            <LinearLayout
+                android:id="@+id/top_row"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:text="@string/scanning_headline"
-                android:textColor="#526021"
-                android:textSize="30sp"
-                android:textStyle="bold" />
+                android:gravity="top"
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/scanning_instructions"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/scanning_headline"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="10dp"
-                android:text="@string/scanning_instructions"
-                android:textSize="20sp" />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="top"
+                    android:layout_marginLeft="4dp"
+                    android:layout_weight="10"
+                    android:adjustViewBounds="true"
+                    android:paddingRight="6dp"
+                    android:src="@drawable/launcher_background" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="8"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/scanning_headline"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="4dp"
+                        android:text="@string/scanning_headline"
+                        android:textColor="#526E17"
+                        android:textSize="30sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/scanning_instructions"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:text="@string/scanning_instructions"
+                        android:textSize="22sp" />
+
+                </LinearLayout>
+
+            </LinearLayout>
 
             <Button
                 android:id="@+id/scan_button"
-                android:layout_width="wrap_content"
+                style="@style/WizardButton"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/scanning_instructions"
+                android:layout_below="@+id/top_row"
                 android:layout_centerHorizontal="true"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="38dp"
-                android:background="@drawable/rounded_corners_green_bg"
-                android:padding="10dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="30dp"
                 android:text="@string/scan_product_code"
                 android:textSize="36sp" />
 
-            <Button
-                android:id="@+id/input_code"
+            <TextView
+                android:id="@+id/or_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/input_code"
+                android:layout_marginBottom="6dp"
+                android:layout_marginLeft="20dp"
+                android:text="eller"
+                android:textColor="#526E17"
+                android:textSize="32sp" />
+
+            <Button
+                android:id="@+id/input_code"
+                style="@style/WizardButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@+id/scan_button"
                 android:layout_below="@+id/scan_button"
-                android:layout_centerHorizontal="true"
                 android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="38dp"
-                android:background="@drawable/rounded_corners_green_bg"
-                android:padding="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_toRightOf="@+id/or_label"
                 android:text="@string/input_product_code"
-                android:textSize="36sp" />
+                android:textSize="20sp" />
 
         </RelativeLayout>
 
