--- a/src/main/res/layout/activity_product_details.xml
+++ b/src/main/res/layout/activity_product_details.xml
@@ -94,7 +94,6 @@
 
         <LinearLayout
             android:id="@+id/button_row"
-            style="?android:attr/buttonBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/product_image"
@@ -104,22 +103,18 @@
 
             <Button
                 android:id="@+id/scan_button"
-                style="?android:attr/buttonBarStyle"
+                style="@style/WizardButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="50dp"
-                android:background="@drawable/rounded_corners_green_bg"
-                android:padding="10dp"
                 android:text="@string/label_new_search"
                 android:textSize="20sp" />
 
             <Button
                 android:id="@+id/modify_button"
-                style="?android:attr/buttonBarStyle"
+                style="@style/WizardButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/rounded_corners_green_bg"
-                android:padding="10dp"
                 android:text="@string/label_modify_product"
                 android:textSize="20sp" />
 
