--- a/src/main/res/layout/fragment_check_if_not_vegetarian_at_all.xml
+++ b/src/main/res/layout/fragment_check_if_not_vegetarian_at_all.xml
@@ -100,16 +100,17 @@
 
         <Button
             android:id="@+id/next_wizard_button"
+            style="@style/WizardButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:layout_below="@+id/confirmed_vegetarian_comment"
-            android:layout_marginTop="10dp"
             android:text="@string/action_next" />
 
         <Button
             android:id="@+id/cancel_wizard_button"
+            style="@style/WizardButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/confirmed_vegetarian_comment"
