--- a/src/main/res/layout/fragment_check_if_vegetarian.xml
+++ b/src/main/res/layout/fragment_check_if_vegetarian.xml
@@ -82,21 +82,21 @@
 
         <Button
             android:id="@+id/next_wizard_button"
+            style="@style/WizardButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:layout_below="@+id/contains_insect_excretions_details"
-            android:layout_marginTop="10dp"
             android:text="@string/action_next" />
 
         <Button
             android:id="@+id/cancel_wizard_button"
+            style="@style/WizardButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/contains_insect_excretions_details"
             android:layout_marginRight="50dp"
-            android:layout_marginTop="10dp"
             android:layout_toLeftOf="@+id/next_wizard_button"
             android:text="@string/action_previous" />
 
