--- a/src/main/res/layout/fragment_enough_information.xml
+++ b/src/main/res/layout/fragment_enough_information.xml
@@ -27,22 +27,20 @@
 
         <Button
             android:id="@+id/submit_button"
+            style="@style/WizardButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/status"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
-            android:padding="10dp"
             android:text="@string/submit_for_approval" />
 
         <Button
             android:id="@+id/cancel_button"
+            style="@style/WizardButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/submit_button"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
-            android:padding="10dp"
             android:text="@string/cancel_wizard" />
 
 
