--- a/src/main/res/layout/fragment_manual_input.xml
+++ b/src/main/res/layout/fragment_manual_input.xml
@@ -42,14 +42,16 @@
 
     <Button
         android:id="@+id/manual_gtin_search"
+        style="@style/WizardButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/manual_input_gtin_edittext"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:background="@drawable/rounded_corners_green_bg"
+        android:drawableLeft="@drawable/search_icon"
+        android:drawablePadding="10dp"
         android:text="@string/manual_gtin_search"
-        android:textSize="20sp" />
+        android:textSize="42sp" />
 
 
 </RelativeLayout>
