--- a/src/main/res/layout/fragment_metainformation.xml
+++ b/src/main/res/layout/fragment_metainformation.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".wizard.RequestMetaInformation.MetaInformationFragment">
+    tools:context=".wizard.RequestMetaInformation">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -124,21 +124,21 @@
 
         <Button
             android:id="@+id/next_wizard_button"
+            style="@style/WizardButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:layout_below="@+id/commentary_edit"
-            android:layout_marginTop="10dp"
             android:text="@string/action_next" />
 
         <Button
             android:id="@+id/cancel_wizard_button"
+            style="@style/WizardButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/commentary_edit"
             android:layout_marginRight="50dp"
-            android:layout_marginTop="10dp"
             android:layout_toLeftOf="@+id/next_wizard_button"
             android:text="@string/action_cancel" />
 
